Amelioration du client et de serveur proxy

--- a/client/openid-connect-tool/index.html
+++ b/client/openid-connect-tool/index.html
@@ -119,10 +119,10 @@
                             <button id="button-token" type="button" class="btn btn-primary" onclick="getTokens()">
                                 Get Tokens
                             </button>
-                            <button id="button-profile" type="button" class="btn btn-primary" onclick="getProfile1()">
+                            <button id="button-profile1" type="button" class="btn btn-primary" onclick="getProfile1()">
                                 Get Profile noeuds1 (proxy1)
                             </button>
-                            <button id="button-profile" type="button" class="btn btn-primary" onclick="getProfile2()">
+                            <button id="button-profile2" type="button" class="btn btn-primary" onclick="getProfile2()">
                                 Get Profile noeuds2 (proxy2)
                             </button>
                             <button id="button-account" type="button" class="btn btn-primary" onclick="showAccount()">
